ffigen/LabSoundHelper.h

typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
void AudioBus_setSampleRate(int busIndex, float sampleRate);
// Zeroes all channels.
void AudioBus_zero(int busIndex);
// Clears the silent flag on all channels.
void AudioBus_clearSilentFlag(int busIndex);
// Scales all samples by the same amount.
void AudioBus_scale(int busIndex, float scale);
// for de-zippering
void AudioBus_reset(int busIndex);
// Returns true if the silent bit is set on all channels.
int AudioBus_isSilent(int busIndex);
int AudioBus_isFirstTime(int busIndex);
void releaseAudioBus(int index);
AudioChannel * AudioBus_channel(int busId, int channelIndex);
int AudioChannel_length(AudioChannel * channel);
const float * AudioChannel_data(AudioChannel * channel);
////////////////
/// GainNode ///
////////////////

int createGain(AudioContext* context);
int GainNode_gain(int nodeId);
////////////////////
/// RecorderNode ///
////////////////////

// create a recorder with a specific configuration
int createRecorderNode(AudioContext* context, int channelCount);
int createRecorderNodeByConfig(AudioContext* context, AudioStreamConfig outputConfig );
void RecorderNode_startRecording(int nodeId);
void RecorderNode_stopRecording(int nodeId);
float RecorderNode_recordedLengthInSeconds(int nodeId);
// create a bus from the recording; it can be used by other nodes
// such as a SampledAudioNode.
int RecorderNode_createBusFromRecording(int nodeId, int mixToMono);
// returns true for success
int RecorderNode_writeRecordingToWav(int nodeId, char *file, int mixToMono);
////////////////////
/// AnalyserNode ///
////////////////////

int createAnalyserNode(AudioContext* context);
int createAnalyserNodeFftSize(AudioContext* context, int fftSize);
void AnalyserNode_setFftSize(int nodeId, AudioContext* context, int fftSize);
int AnalyserNode_fftSize(int nodeId);
// a value large enough to hold all the data return from get*FrequencyData
int AnalyserNode_frequencyBinCount(int nodeId);
void AnalyserNode_setMinDecibels(int nodeId, double k);
int AnalyserNode_minDecibels(int nodeId);
void AnalyserNode_setMaxDecibels(int nodeId, double k);
int AnalyserNode_maxDecibels(int nodeId);
void AnalyserNode_setSmoothingTimeConstant(int nodeId, double k);