lib/tau_labs_bindings_generated.dart


  late final _AudioBus_setSampleRatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'AudioBus_setSampleRate',
      );
  late final _AudioBus_setSampleRate =
      _AudioBus_setSampleRatePtr.asFunction<void Function(int, double)>();

  /// Zeroes all channels.
  void AudioBus_zero(int busIndex) {
    return _AudioBus_zero(busIndex);
  }

  late final _AudioBus_zeroPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('AudioBus_zero');
  late final _AudioBus_zero =
      _AudioBus_zeroPtr.asFunction<void Function(int)>();

  /// Clears the silent flag on all channels.
  void AudioBus_clearSilentFlag(int busIndex) {
    return _AudioBus_clearSilentFlag(busIndex);
  }

  late final _AudioBus_clearSilentFlagPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'AudioBus_clearSilentFlag',
      );
  late final _AudioBus_clearSilentFlag =
      _AudioBus_clearSilentFlagPtr.asFunction<void Function(int)>();

  /// Scales all samples by the same amount.
  void AudioBus_scale(int busIndex, double scale) {
    return _AudioBus_scale(busIndex, scale);
  }

  late final _AudioBus_scalePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'AudioBus_scale',
      );
  late final _AudioBus_scale =
      _AudioBus_scalePtr.asFunction<void Function(int, double)>();

  /// for de-zippering
  void AudioBus_reset(int busIndex) {
    return _AudioBus_reset(busIndex);
  }

  late final _AudioBus_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('AudioBus_reset');
  late final _AudioBus_reset =
      _AudioBus_resetPtr.asFunction<void Function(int)>();

  /// Returns true if the silent bit is set on all channels.
  int AudioBus_isSilent(int busIndex) {
    return _AudioBus_isSilent(busIndex);
  }

  late final _AudioBus_isSilentPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioBus_isSilent',
      );
  late final _AudioBus_isSilent =
      _AudioBus_isSilentPtr.asFunction<int Function(int)>();

  int AudioBus_isFirstTime(int busIndex) {
    return _AudioBus_isFirstTime(busIndex);
  }

  late final _AudioBus_isFirstTimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioBus_isFirstTime',
      );
  late final _AudioBus_isFirstTime =
      _AudioBus_isFirstTimePtr.asFunction<int Function(int)>();

  void releaseAudioBus(int index) {
    return _releaseAudioBus(index);
  }

  late final _releaseAudioBusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'releaseAudioBus',
      );
  late final _releaseAudioBus =
      _releaseAudioBusPtr.asFunction<void Function(int)>();

  ffi.Pointer<ffi.Void> AudioBus_channel(int busId, int channelIndex) {
    return _AudioBus_channel(busId, channelIndex);
  }

  late final _AudioBus_channelPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Int, ffi.Int)>
  >('AudioBus_channel');
  late final _AudioBus_channel =
      _AudioBus_channelPtr.asFunction<
        ffi.Pointer<ffi.Void> Function(int, int)
      >();

  int AudioChannel_length(ffi.Pointer<ffi.Void> channel) {
    return _AudioChannel_length(channel);
  }

  late final _AudioChannel_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'AudioChannel_length',
      );
  late final _AudioChannel_length =
      _AudioChannel_lengthPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Float> AudioChannel_data(ffi.Pointer<ffi.Void> channel) {
    return _AudioChannel_data(channel);
  }

  late final _AudioChannel_dataPtr = _lookup<
    ffi.NativeFunction<ffi.Pointer<ffi.Float> Function(ffi.Pointer<ffi.Void>)>
  >('AudioChannel_data');
  late final _AudioChannel_data =
      _AudioChannel_dataPtr.asFunction<
        ffi.Pointer<ffi.Float> Function(ffi.Pointer<ffi.Void>)
      >();

  /// /////////////
  /// GainNode ///
  /// /////////////
  int createGain(ffi.Pointer<ffi.Void> context) {
    return _createGain(context);
  }

  late final _createGainPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createGain',
      );
  late final _createGain =
      _createGainPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int GainNode_gain(int nodeId) {
    return _GainNode_gain(nodeId);
  }

  late final _GainNode_gainPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('GainNode_gain');
  late final _GainNode_gain = _GainNode_gainPtr.asFunction<int Function(int)>();

  /// create a recorder with a specific configuration
  int createRecorderNode(ffi.Pointer<ffi.Void> context, int channelCount) {
    return _createRecorderNode(context, channelCount);
  }

  late final _createRecorderNodePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('createRecorderNode');
  late final _createRecorderNode =
      _createRecorderNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int createRecorderNodeByConfig(
    ffi.Pointer<ffi.Void> context,
    AudioStreamConfig outputConfig,
  ) {
    return _createRecorderNodeByConfig(context, outputConfig);
  }

  late final _createRecorderNodeByConfigPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Pointer<ffi.Void>, AudioStreamConfig)
    >
  >('createRecorderNodeByConfig');
  late final _createRecorderNodeByConfig =
      _createRecorderNodeByConfigPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, AudioStreamConfig)>();

  void RecorderNode_startRecording(int nodeId) {
    return _RecorderNode_startRecording(nodeId);
  }

  late final _RecorderNode_startRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'RecorderNode_startRecording',
      );
  late final _RecorderNode_startRecording =
      _RecorderNode_startRecordingPtr.asFunction<void Function(int)>();

  void RecorderNode_stopRecording(int nodeId) {
    return _RecorderNode_stopRecording(nodeId);
  }

  late final _RecorderNode_stopRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'RecorderNode_stopRecording',
      );
  late final _RecorderNode_stopRecording =
      _RecorderNode_stopRecordingPtr.asFunction<void Function(int)>();

  double RecorderNode_recordedLengthInSeconds(int nodeId) {
    return _RecorderNode_recordedLengthInSeconds(nodeId);
  }

  late final _RecorderNode_recordedLengthInSecondsPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'RecorderNode_recordedLengthInSeconds',
      );
  late final _RecorderNode_recordedLengthInSeconds =
      _RecorderNode_recordedLengthInSecondsPtr.asFunction<
        double Function(int)
      >();

  /// create a bus from the recording; it can be used by other nodes
  /// such as a SampledAudioNode.
  int RecorderNode_createBusFromRecording(int nodeId, int mixToMono) {
    return _RecorderNode_createBusFromRecording(nodeId, mixToMono);
  }

  late final _RecorderNode_createBusFromRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'RecorderNode_createBusFromRecording',
      );
  late final _RecorderNode_createBusFromRecording =
      _RecorderNode_createBusFromRecordingPtr.asFunction<
        int Function(int, int)
      >();

  /// returns true for success
  int RecorderNode_writeRecordingToWav(
    int nodeId,
    ffi.Pointer<ffi.Char> file,
    int mixToMono,
  ) {
    return _RecorderNode_writeRecordingToWav(nodeId, file, mixToMono);
  }

  late final _RecorderNode_writeRecordingToWavPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>, ffi.Int)
    >
  >('RecorderNode_writeRecordingToWav');
  late final _RecorderNode_writeRecordingToWav =
      _RecorderNode_writeRecordingToWavPtr.asFunction<
        int Function(int, ffi.Pointer<ffi.Char>, int)
      >();

  /// /////////////////
  /// AnalyserNode ///
  /// /////////////////
  int createAnalyserNode(ffi.Pointer<ffi.Void> context) {
    return _createAnalyserNode(context);
  }

  late final _createAnalyserNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createAnalyserNode',
      );
  late final _createAnalyserNode =
      _createAnalyserNodePtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int createAnalyserNodeFftSize(ffi.Pointer<ffi.Void> context, int fftSize) {
    return _createAnalyserNodeFftSize(context, fftSize);
  }

  late final _createAnalyserNodeFftSizePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
  >('createAnalyserNodeFftSize');
  late final _createAnalyserNodeFftSize =
      _createAnalyserNodeFftSizePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  void AnalyserNode_setFftSize(
    int nodeId,
    ffi.Pointer<ffi.Void> context,
    int fftSize,
  ) {
    return _AnalyserNode_setFftSize(nodeId, context, fftSize);
  }

  late final _AnalyserNode_setFftSizePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Void>, ffi.Int)
    >
  >('AnalyserNode_setFftSize');
  late final _AnalyserNode_setFftSize =
      _AnalyserNode_setFftSizePtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Void>, int)
      >();

  int AnalyserNode_fftSize(int nodeId) {
    return _AnalyserNode_fftSize(nodeId);
  }

  late final _AnalyserNode_fftSizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AnalyserNode_fftSize',
      );
  late final _AnalyserNode_fftSize =
      _AnalyserNode_fftSizePtr.asFunction<int Function(int)>();

  /// a value large enough to hold all the data return from get*FrequencyData
  int AnalyserNode_frequencyBinCount(int nodeId) {
    return _AnalyserNode_frequencyBinCount(nodeId);
  }

  late final _AnalyserNode_frequencyBinCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AnalyserNode_frequencyBinCount',
      );
  late final _AnalyserNode_frequencyBinCount =
      _AnalyserNode_frequencyBinCountPtr.asFunction<int Function(int)>();

  void AnalyserNode_setMinDecibels(int nodeId, double k) {
    return _AnalyserNode_setMinDecibels(nodeId, k);
  }

  late final _AnalyserNode_setMinDecibelsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double)>>(
        'AnalyserNode_setMinDecibels',
      );
  late final _AnalyserNode_setMinDecibels =
      _AnalyserNode_setMinDecibelsPtr.asFunction<void Function(int, double)>();

  int AnalyserNode_minDecibels(int nodeId) {
    return _AnalyserNode_minDecibels(nodeId);
  }

  late final _AnalyserNode_minDecibelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AnalyserNode_minDecibels',
      );
  late final _AnalyserNode_minDecibels =
      _AnalyserNode_minDecibelsPtr.asFunction<int Function(int)>();

  void AnalyserNode_setMaxDecibels(int nodeId, double k) {
    return _AnalyserNode_setMaxDecibels(nodeId, k);
  }

  late final _AnalyserNode_setMaxDecibelsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double)>>(
        'AnalyserNode_setMaxDecibels',
      );
  late final _AnalyserNode_setMaxDecibels =
      _AnalyserNode_setMaxDecibelsPtr.asFunction<void Function(int, double)>();

  int AnalyserNode_maxDecibels(int nodeId) {
    return _AnalyserNode_maxDecibels(nodeId);
  }

  late final _AnalyserNode_maxDecibelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AnalyserNode_maxDecibels',
      );
  late final _AnalyserNode_maxDecibels =
      _AnalyserNode_maxDecibelsPtr.asFunction<int Function(int)>();

  void AnalyserNode_setSmoothingTimeConstant(int nodeId, double k) {
    return _AnalyserNode_setSmoothingTimeConstant(nodeId, k);
  }
